--- a/about.html
+++ b/about.html
@@ -50,7 +50,10 @@
                 <div class="dropdown-divider"></div>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="#">Support</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Write for Us</a>
                 </li>
               </ul>
             </li>
