--- a/about.html
+++ b/about.html
@@ -49,12 +49,8 @@
                 <li><a class="dropdown-item" href="#">Web Development</a></li>
                 <div class="dropdown-divider"></div>
                 <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Support</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Write for Us</a>
-                </li>
+                <li><a class="dropdown-item" href="#">Support</a> </li>
+                <li> <a class="dropdown-item" href="#">Write for Us</a></li>
               </ul>
             </li>
             <li class="nav-item">
